--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@
                     </script>
                     <div class="text" data-relative-input="true">
                         <h2 class="h2-footer noselect">~ Подвал ~</h2>
-                        <h3 style="font-style: italic" class="noselect">Все права защищены ©️ 2021 г. | <a
+                        <h3 style="font-style: italic" class="noselect">Все права защищены ©️ 2021-2023 г. | <a
                                 href="./">STIXIEC</a></h3>
                         <div class="footerLinksLine"></div>
 
                         <h3 style="margin-top: 50px;" class="linksFooter">・Discord разработчика / владельца:
-                            <div class="tooltip"><a onclick="copyLink(event, `STIXIEC#9254`)"
-                                    data-link="STIXIEC#9254"></a><span
+                            <div class="tooltip"><a onclick="copyLink(event, `STIXIEC#6969`)"
+                                    data-link="STIXIEC#6969"></a><span
                                     class="tooltiptext">Скопировать</span></div>
 
                             <h3 class="linksFooter">・Gmail почта: <a
